# memex

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  llmgraph_prd.md
.claude/: settings.json
.github/workflows/: ci.yml  memex-check.yml
.llmgraph/: .gitignore  graph.json
.llmgraph/nodes/: 795dad67-a2db-43a4-bcad-0cbf7ea46923.json  c1c47299-e44b-42da-bdb2-994c259c40cd.json
.memex/: config.toml  graph.json
.memex/nodes/: 0063801a-b3b6-475d-928a-74305810efe2.json  074d970f-d6e3-4c42-aae5-7c73c3adcd80.json  15b2ec54-8601-48e5-8e4c-7cc8cbb6a7db.json  173a43aa-789f-498f-b46f-2eafc8c6c646.json  18f50221-c31f-4c7f-8d53-5ea9c91e01ff.json  1d566d00-399a-4447-aa27-1210f5acdd45.json  269bfac9-e21c-42a3-8ed0-6bbc5ead6a17.json  27ed3dfa-d5c3-4b34-8b44-1f633e47d32f.json  2a16cfa5-528f-49e0-9dc4-94d2a1197747.json  4c5d1764-f935-4e6f-a8d9-66031060d5b8.json  50769c1a-f2a8-4096-9b12-74219269bc06.json  51674117-0a97-453a-91db-704779230b8a.json  58cafd34-05c1-4bc6-adcf-c2a86d7d2ee3.json  5a17fac4-c62e-4db5-bf10-183486bc4b31.json  6aa10762-18c3-41a3-96f3-7c68387fa04f.json  6b5dfbf7-0a77-47ab-bfa1-be67cf9f8eb2.json  8403a5cb-721b-4c62-b019-2d02ecff7c82.json  925f8e38-6ed4-4bae-9424-2dc672c9cb64.json  97071768-0b92-46ae-9558-877b828b9eb9.json  9943671a-cdd9-42d9-b90d-90e9547d96b5.json  9f869ab8-4aa9-499c-b316-a3c563407906.json  abb28756-4345-486f-8ee9-96489c16eb69.json  af5774e3-d353-477c-93ea-8f465e62028e.json  (+9 more)
bench/: token-ablation.md
scripts/: context-size.sh
src/: editor.rs  git.rs  main.rs  models.rs  store.rs
src/commands/: init.rs  (+6 more)
tests/: integration_tests.rs
