[package]
name = "memex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
